# hyperbase

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yml.example
api/internal/gossip/: Cargo.toml
api/internal/gossip/src/: client.rs  handler.rs  lib.rs  message.rs  peer.rs  server.rs  service.rs  view.rs
api/internal/gossip/src/config/: database_messaging.rs  peer_sampling.rs
api/internal/gossip/src/message/: content.rs  database_action.rs  header.rs
api/internal/gossip/src/service/: database_messaging.rs  peer_sampling.rs
api/mqtt/: Cargo.toml
api/mqtt/src/: context.rs  error_handler.rs  handshake.rs  lib.rs  model.rs  publish.rs  service.rs  session.rs
api/mqtt/src/model/: log.rs  payload.rs  record.rs
api/mqtt/src/service/: record.rs  v5.rs
api/mqtt/src/service/v3/: pub_record.rs
api/mqtt/src/service/v5/: pub_record.rs
api/mqtt/src/util/: ws_broadcast.rs
api/rest/: Cargo.toml
api/rest/src/: config.rs  configure.rs  context.rs  error_handler.rs  lib.rs  logger.rs  model.rs  service.rs  util.rs  v1.rs
api/rest/src/model/: admin.rs  auth.rs  bucket.rs  bucket_rule.rs  collection.rs  collection_rule.rs  file.rs  log.rs  project.rs  record.rs  schema_field.rs  token.rs
api/rest/src/service/: admin.rs  auth.rs  bucket.rs  bucket_rule.rs  collection.rs  collection_rule.rs  file.rs  info.rs  log.rs  project.rs  record.rs  root.rs  token.rs  user.rs
api/rest/src/util/: gossip_broadcast.rs  ws_broadcast.rs
api/rest/src/v1/: model.rs  service.rs
api/rest/src/v1/middleware/: auth_guard.rs
api/rest/src/v1/model/: admin.rs  auth.rs  collection.rs  project.rs  record.rs
api/rest/src/v1/service/: admin.rs  auth.rs  collection.rs  project.rs  record.rs
api/websocket/: Cargo.toml
api/websocket/src/: broadcaster.rs  connection.rs  context.rs  handler.rs  lib.rs  message.rs  server.rs  session.rs
config/: Cargo.toml
config/src/: api.rs  app.rs  auth.rs  bucket.rs  db.rs  hash.rs  lib.rs  log.rs  mailer.rs  token.rs
config/src/db/: mysql.rs  postgres.rs  scylla.rs  sqlite.rs
dao/: Cargo.toml
dao/src/: admin.rs  admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  init.rs  lib.rs  local_info.rs  log.rs  project.rs  record.rs  register.rs  registration.rs  remote_sync.rs  token.rs  value.rs
dao/src/dto/: pagination.rs
dao/src/init/: update_change.rs
dao/src/util/: conversion.rs
db/: Cargo.toml
db/mysql/: Cargo.toml
db/mysql/src/: db.rs  model.rs  query.rs
db/mysql/src/model/: admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  registration.rs  system.rs  token.rs  value.rs
db/mysql/src/query/: admin.rs  admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  local_info.rs  log.rs  project.rs  record.rs  registration.rs  remote_sync.rs  system.rs  token.rs
db/postgresql/: Cargo.toml
db/postgresql/src/: db.rs  model.rs  query.rs
db/postgresql/src/model/: bucket.rs  change.rs  collection.rs  collection_rule.rs  file.rs  log.rs  remote_sync.rs  system.rs  token.rs  value.rs
db/postgresql/src/query/: admin.rs  admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  local_info.rs  log.rs  project.rs  record.rs  registration.rs  remote_sync.rs  system.rs  token.rs
db/scylladb/: Cargo.toml
db/scylladb/src/: db.rs  lib.rs  model.rs  models.rs  query.rs  repository.rs
db/scylladb/src/model/: admin.rs  admin_password_reset.rs  base.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  log.rs  project.rs  record.rs  registration.rs  remote_sync.rs  schema_field.rs  schema_field_kind.rs  system.rs  token.rs  value.rs
db/scylladb/src/models/: base.rs  collection.rs  record.rs  schema.rs
db/scylladb/src/prepared_statement/: admin.rs  admin_password_reset.rs  collection.rs  project.rs  registration.rs  token.rs
db/scylladb/src/query/: admin.rs  admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  keyspace.rs  log.rs  project.rs  record.rs  registration.rs  remote_sync.rs  system.rs  token.rs
db/sqlite/: Cargo.toml
db/sqlite/src/: db.rs  model.rs  query.rs
db/sqlite/src/model/: admin.rs  collection.rs  file.rs  local_info.rs  project.rs  remote_sync.rs  system.rs  token.rs  value.rs
db/sqlite/src/query/: admin.rs  admin_password_reset.rs  bucket.rs  bucket_rule.rs  change.rs  collection.rs  collection_rule.rs  file.rs  local_info.rs  log.rs  project.rs  record.rs  registration.rs  remote_sync.rs  system.rs  token.rs
db/src/: driver.rs  lib.rs  model.rs  repository.rs
db/src/model/: admin.rs  base.rs  collection.rs  project.rs  schema_field.rs  schema_field_kind.rs
docs/: book.toml
error/: Cargo.toml
error/src/: lib.rs
hash/argon2/: Cargo.toml
hash/argon2/src/: argon2.rs  lib.rs
hyperbase/: Cargo.toml
hyperbase/src/: config_path.rs  main.rs
log/: Cargo.toml
log/src/: lib.rs
mailer/: Cargo.toml
mailer/src/: lib.rs
token/jwt/: Cargo.toml
token/jwt/src/: claim.rs  context.rs  kind.rs  lib.rs  token.rs
