[workspace]
resolver = "2"
members = [
    "hyperbase",
    "log",
    "config",
    "hash/argon2",
    "db/scylladb",
    "db/postgresql",
    "db/mysql",
    "db/sqlite",
    "error",
    "dao",
    "mailer",
    "token/jwt",
    "api/rest",
    "api/mqtt",
    "api/websocket",
]


[workspace.dependencies]
hb_api_mqtt = { path = "./api/mqtt" }
hb_api_rest = { path = "./api/rest" }
hb_api_websocket = { path = "./api/websocket" }
hb_config = { path = "./config" }
hb_dao = { path = "./dao" }
hb_db_mysql = { path = "./db/mysql" }
hb_db_postgresql = { path = "./db/postgresql" }
hb_db_scylladb = { path = "./db/scylladb" }
hb_db_sqlite = { path = "./db/sqlite" }
hb_error = { path = "./error" }
hb_hash_argon2 = { path = "./hash/argon2" }
hb_log = { path = "./log" }
hb_mailer = { path = "./mailer" }
hb_token_jwt = { path = "./token/jwt" }

actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = "4"
actix-web-httpauth = "0.8"
actix-ws-ng = "0.3"
ahash = "0.8"
anyhow = "1"
argon2 = "0.5"
backtrace = "0.3"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
duration-str = { version = "0.7", default-features = false, features = [
    "chrono",
    "serde",
] }
futures = "0.3"
itertools = "0.12"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
] }
mime = "0.3"
num-bigint = { version = "0.4", features = ["serde"] }
rand = "0.8"
rumqttc = "0.24"
scylla = { version = "0.12", features = ["num-bigint-04", "bigdecimal-04"] }
serde = { version = "1" }
serde_json = { version = "1" }
serde_yaml = "0.9"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "bigdecimal",
    "json",
    "postgres",
    "mysql",
    "sqlite",
] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "fast-rng", "serde"] }
validator = { version = "0.17", features = ["derive"] }


[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "forbid"
unused_imports = "deny"
