[package]
name = "hb_dao"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_db_mysql = { workspace = true }
hb_db_postgresql = { workspace = true }
hb_db_scylladb = { workspace = true }
hb_db_sqlite = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
scylla = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }


[lints]
workspace = true
