[package]
name = "hyperbase"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]

[dependencies]
hb_api_rest = { workspace = true }
hb_config = { workspace = true }
hb_dao = { workspace = true }
hb_db_scylladb = { workspace = true }
hb_hash_argon2 = { workspace = true }
hb_log = { workspace = true }
hb_mailer = { workspace = true }
hb_token_jwt = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
