[package]
name = "hb_mailer"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

anyhow = { workspace = true }
lettre = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }


[lints]
workspace = true
