[package]
name = "hb_api_rest"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]

[dependencies]
hb_dao = { workspace = true }
hb_hash_argon2 = { workspace = true }
hb_log = { workspace = true }
hb_mailer = { workspace = true }
hb_token_jwt = { workspace = true }

actix_header = { workspace = true }
actix-web = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[lints]
workspace = true
