[package]
name = "hb_api_rest"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_api_internal_gossip = { workspace = true }
hb_api_websocket = { workspace = true }
hb_config = { workspace = true }
hb_dao = { workspace = true }
hb_error = { workspace = true }
hb_hash_argon2 = { workspace = true }
hb_log = { workspace = true }
hb_mailer = { workspace = true }
hb_token_jwt = { workspace = true }

actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
actix-ws-ng = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }


[lints]
workspace = true
