[package]
name = "hb_db_mysql"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }


[lints]
workspace = true
