[package]
name = "hb_db_postgresql"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

sqlx = { workspace = true, features = ["postgres"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }


[lints]
workspace = true
