[package]
name = "hb_db_postgresql"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
uuid = { workspace = true }


[lints]
workspace = true
