[package]
name = "hb_db_scylladb"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
scylla = { workspace = true }
uuid = { workspace = true }


[lints]
workspace = true
