[package]
name = "hb_db_sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

ahash = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
uuid = { workspace = true }


[lints]
workspace = true
