[package]
name = "hb_token_jwt"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Naufal Hilmy Makarim <mail@hilmy.dev>"]


[dependencies]
hb_log = { workspace = true }

anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }


[lints]
workspace = true
